force-app/main/default/objects/Propfocus_Link__c/Propfocus_Link__c.object-meta.xml
<CustomObject>
    <label>Propfocus Link</label>
    <nameField>
        <displayFormat>PL-{000000}</displayFormat>
        <label>Propfocus Link Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Propfocus Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>