force-app/main/default/objects/Propfocus_Link__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Propfocus Links</relationshipLabel>
    <relationshipName>PropfocusLinks</relationshipName>
    <type>Lookup</type>
</CustomField>