force-app/main/default/objects/Propfocus_Link__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Propfocus Links (Opportunity)</relationshipLabel>
    <relationshipName>PropfocusOppLinks</relationshipName>
    <type>Lookup</type>
</CustomField>